fix: fix the issue which made too many ChatItem components visually exceed the ChatList component (apply overflow-y)

--- a/src/components/Chats/ChatsWindow/ChatsWindow.module.scss
+++ b/src/components/Chats/ChatsWindow/ChatsWindow.module.scss
@@ -3,6 +3,7 @@
 .container {
   display: grid;
   grid-template-rows: 1fr 10fr 1fr;
+  gap: 5px;
   flex-shrink: 0;
   width: 334px;
   padding: 24px 16px 16px 16px;
