--- a/src/components/Chats/ChatsWindow/components/ChatList/ChatList.module.scss
+++ b/src/components/Chats/ChatsWindow/components/ChatList/ChatList.module.scss
@@ -3,4 +3,6 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  overflow-y: auto;
+  padding: 0 10px;
 }
